# django-drf

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
payment/: apiviews.py  models.py  serializers.py  urls.py
payment/management/commands/: create_payment.py
payment/migrations/: 0001_initial.py
studies/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py
studies/apiviews/: lesson.py  well.py
studies/migrations/: 0001_initial.py  0002_lesson_well.py  0003_lesson_author_well_author.py  0004_alter_well_author.py  0005_alter_well_author.py
studies/views/: lesson.py
subscription/: apiviews.py  models.py  serializers.py  tests.py  urls.py  views.py
subscription/migrations/: 0001_initial.py
users/: models.py  urls.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_user_job_title.py
